--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" href="%PUBLIC_URL%/audiotrack.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Frontend template made by xbotpc" />
+  <meta name="description" content="Classic Tic-Tac-Toe" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/audiotrack.svg" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>xbotpc's frontend template</title>
+  <title>Classic Tic-Tac-Toe</title>
 </head>
 
 <body>
